--- a/app/src/main/resources/templates/notifications.html
+++ b/app/src/main/resources/templates/notifications.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html"><head>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>Notifications</title>
     <link rel="stylesheet" th:href="@{/css/notifications.css}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -158,14 +158,14 @@
         <div class="details-section">
             <div class="details-section-container">
                 <strong>Notification state: </strong>
-                <p class="enabled-notification-status" th:if="${notificationPreference.enabled}">ENABLED</p>
-                <p class="disabled-notification-status" th:unless="${notificationPreference.enabled}">DISABLED</p>
+                <p class="enabled-notification-status" th:if="${notificationPreference.notificationEnabled}">ENABLED</p>
+                <p class="disabled-notification-status" th:unless="${notificationPreference.notificationEnabled}">DISABLED</p>
             </div>
         </div>
 
         <p>Change State:</p>
         <div class="allowed-notification-actions">
-            <form th:action="@{'/notifications/user-preference?enabled=false'}" th:method="PUT" th:if="${notificationPreference.enabled}">
+            <form th:action="@{'/notifications/user-preference?notificationEnabled=false'}" th:method="PUT" th:if="${notificationPreference.enabled}">
                 <button class="profile-actions-button disable-notifications">
                     <p>Disable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +174,7 @@
                     </svg>
                 </button>
             </form>
-            <form th:action="@{'/notifications/user-preference?enabled=true'}" th:method="PUT" th:unless="${notificationPreference.enabled}">
+            <form th:action="@{'/notifications/user-preference?notificationEnabled=true'}" th:method="PUT" th:unless="${notificationPreference.enabled}">
                 <button class="profile-actions-button enable-notifications">
                     <p>Enable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
