--- a/app/src/main/resources/templates/notifications.html
+++ b/app/src/main/resources/templates/notifications.html
@@ -121,7 +121,6 @@
 
     </nav>
 </div></div>
-
 <div class="home-section">
     <div class="notification-preferences-box">
         <h2>Notification Dashboard</h2>
@@ -165,7 +164,7 @@
 
         <p>Change State:</p>
         <div class="allowed-notification-actions">
-            <form th:action="@{'/notifications/user-preference?notificationEnabled=false'}" th:method="PUT" th:if="${notificationPreference.enabled}">
+            <form th:action="@{'/notifications/user-preference?enabled=false'}" th:method="PUT" th:if="${notificationPreference.notificationEnabled}">
                 <button class="profile-actions-button disable-notifications">
                     <p>Disable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -174,7 +173,7 @@
                     </svg>
                 </button>
             </form>
-            <form th:action="@{'/notifications/user-preference?notificationEnabled=true'}" th:method="PUT" th:unless="${notificationPreference.enabled}">
+            <form th:action="@{'/notifications/user-preference?enabled=true'}" th:method="PUT" th:unless="${notificationPreference.notificationEnabled}">
                 <button class="profile-actions-button enable-notifications">
                     <p>Enable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -222,7 +221,6 @@
             <tbody>
             <tr th:each="notification : ${notificationHistory}">
                 <td th:text="${notification.subject}"></td>
-                <td th:text="${#temporals.format(notification.createdOn, 'dd MMM YYYY')}"></td>
                 <td th:if="${notification.status == 'SUCCEEDED'}"><span class="status succeeded">Succeeded</span></td>
                 <td th:if="${notification.status == 'FAILED'}"><span class="status failed">Failed</span></td>
                 <td>
@@ -231,6 +229,7 @@
             </tr>
             </tbody>
         </table>
+        <div>
         // Ako nqmame notificationi - default
         <table class="styled-table" th:if="${#lists.isEmpty(notificationHistory)}">
             <thead>
@@ -252,7 +251,7 @@
         </table>
         <p class="small-informative-text-bottom">Every record in this table is equal to 1 notification of a certain type.</p>
     </div>
+    </div>
 </div>
-</main>
 </body>
 </html>
