--- a/app/src/main/resources/templates/notifications.html
+++ b/app/src/main/resources/templates/notifications.html
@@ -157,14 +157,15 @@
         <div class="details-section">
             <div class="details-section-container">
                 <strong>Notification state: </strong>
-                <p class="enabled-notification-status" th:if="${notificationPreference.notificationEnabled}">ENABLED</p>
-                <p class="disabled-notification-status" th:unless="${notificationPreference.notificationEnabled}">DISABLED</p>
+                <p class="enabled-notification-status" th:if="${notificationPreference.notificationEnabled == true}">ENABLED</p>
+                <p class="disabled-notification-status" th:if="${notificationPreference.notificationEnabled == false}">DISABLED</p>
+
             </div>
         </div>
 
         <p>Change State:</p>
         <div class="allowed-notification-actions">
-            <form th:action="@{'/notifications/user-preference?notificationEnabled=false'}" th:method="PUT" th:if="${notificationPreference.notificationEnabled}">
+            <form th:action="@{'/notifications/user-preference?enabled=false'}" th:method="PUT" th:if="${notificationPreference.notificationEnabled}">
                 <button class="profile-actions-button disable-notifications">
                     <p>Disable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -173,7 +174,7 @@
                     </svg>
                 </button>
             </form>
-            <form th:action="@{'/notifications/user-preference?notificationEnabled=true'}" th:method="PUT" th:unless="${notificationPreference.notificationEnabled}">
+            <form th:action="@{'/notifications/user-preference?enabled=true'}" th:method="PUT" th:unless="${notificationPreference.notificationEnabled}">
                 <button class="profile-actions-button enable-notifications">
                     <p>Enable Notifications</p>
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
